# rust-auto-piano-player

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
schemas/: data_macro.json  data_sheet.json  piano_song.json
songs/: DireDireDocks.json  Hatsune Miku - Senbonzakura.mid.mid  InterstellarMainTheme.json  KassTheme.json  LApresMidi.json  LuxAeterna.json  MariageDArmour.json  README.md  RiverFlowsInYou.json  SkyrimTheme.json  Sparkle.json  SuperMarioBrosMainTheme.json  TanjiroKamadosSong.json  TempleOfTime.json  TheHero.json  WishingRemInoriMinase.json  YourReality.json
src/: macro.rs  main.rs  midi.rs  paino.rs  sheet.rs  song.rs
testing/: EveryKey.json  EveryKey2.json  Macro.json  SchemaTest.json
