[package]
name = "auto-piano-player"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.5"
midi-reader-writer = { version = "0.1.2", features = [ "convert-time", "engine-midly-0-5", "read" ] }
midly = "0.5.3"
mki = "0.2.3"
serde = "1.0.178"
serde_json = "1.0.104"
